<resources>
    <string name="app_name">Codewars Challenge</string>
    <string name="main_fragment_send">Send</string>
    <string name="main_fragment_hint">User name</string>
    <string name="user_not_found">User not found</string>
    <string name="main_fragment_rank">Rank:</string>
    <string name="main_fragment_rank_text">#%d</string>
    <string name="menu_completed_challenges">Completed challenges</string>
    <string name="menu_authored_challenges">Authored challenges</string>
    <string name="error_no_challenges_found">NO CHALLENGES FOUND</string>
    <string name="error_no_challenge_found">NO CHALLENGE FOUND</string>
    <string name="all_challenges_loaded">All challenges loaded</string>
    <string name="server_timeout">There has been a server timeout</string>
    <string name="retry">Retry</string>
    <string name="challenge_detail_description">Description</string>
    <string name="challenge_detail_category">Category: %s</string>

    <string-array name="sorting_array">
        <item>Date</item>
        <item>Rank</item>
    </string-array>

</resources>
